Kbw-2  实现customtable中读取一段string传给微信端

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -7,4 +7,5 @@
   <view class="usermotto">
     <text class="user-motto">{{motto}}</text>
   </view>
+  <button bindtap="bindGetOne">点击设置以上按钮disabled属性</button>
 </view>
