--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,11 +1,10 @@
 <!--index.wxml-->
 <view class="container">
-  <view  bindtap="bindViewTap" class="userinfo">
-    <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
-    <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-  </view>
+  
   <view class="usermotto">
     <text class="user-motto">{{motto}}</text>
   </view>
-  <button bindtap="bindGetOne">点击设置以上按钮disabled属性</button>
+  <button bindtap="bindGetOne">获得一个string</button>
+   <button bindtap="bindGetList">获得stringList</button>
+   
 </view>
