--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,10 +1,10 @@
+
 <!--index.wxml-->
 <view class="container">
-  
   <view class="usermotto">
     <text class="user-motto">{{motto}}</text>
   </view>
   <button bindtap="bindGetOne">获得一个string</button>
-   <button bindtap="bindGetList">获得stringList</button>
-   
+  <button bindtap="bindGetList">获得stringList</button>
+  <button bindtap="bindPostString">保存一条string数据</button>
 </view>
