--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -7,4 +7,5 @@
   <button bindtap="bindGetOne">获得一个string</button>
   <button bindtap="bindGetList">获得stringList</button>
   <button bindtap="bindPostString">保存一条string数据</button>
+   <button bindtap="bindDeleteList">从list中删除数据</button>
 </view>
