Kbw-15 类电商的效果实现-菜品详情

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -9,4 +9,5 @@
   <button bindtap="bindPostString">保存一条string数据</button>
    <button bindtap="bindDeleteList">从list中删除数据</button>
    <button bindtap="bindPicture">图片</button>
+   <button bindtap="bindProductContent">ProductContent</button>
 </view>
