--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -10,4 +10,5 @@
    <button bindtap="bindDeleteList">从list中删除数据</button>
    <button bindtap="bindPicture">图片</button>
    <button bindtap="bindProductContent">ProductContent</button>
+   <button bindtap="bindSearchBusiness">bindSearchBusiness</button>
 </view>
