Kbw-22 商家搜索与进入

--- a/pages/productList/productList.wxml
+++ b/pages/productList/productList.wxml
@@ -1,2 +1,3 @@
-<!--pages/productList/productList.wxml-->
-<text>pages/productList/productList.wxml</text>
+<view class="section" wx:for="{{productData}}">
+  <text class="inline">{{item.ProductName}}</text>
+</view>
