--- a/app.wxss
+++ b/app.wxss
@@ -1,78 +1,259 @@
 /* 基础样式 */
-view,scroll-view,swiper,swiper-item,icon,text,progress,button,checkbox-group,checkbox,form,input,label,picker,radio-group,radio,slider,switch,action-sheet,action-sheet-item,action-sheet-cancel,modal,toast,loading,navigator,audio,image,video,map,canvas {
+
+view, scroll-view, swiper, swiper-item, icon, text, progress, button,
+checkbox-group, checkbox, form, input, label, picker, radio-group, radio, slider,
+switch, action-sheet, action-sheet-item, action-sheet-cancel, modal, toast,
+loading, navigator, audio, image, video, map, canvas {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
+
 page {
   height: 100%;
-  font-family: -apple-system-font,Helvetica Neue,Helvetica,sans-serif;
+  font-family: -apple-system-font, Helvetica Neue, Helvetica, sans-serif;
 }
 
-checkbox-group,
-radio-group{
-  display:block;
+checkbox-group, radio-group {
+  display: block;
 }
 
-:before,
-:after ,
-::before,
-::after{
+:before, :after, ::before, ::after {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
+
 .c-minheight {
   min-height: 80px;
 }
+
 .c-full {
   width: 100%;
   height: 100%;
 }
+
 .c-block {
   display: block;
 }
+
 .c-autosize {
   width: auto;
   height: auto;
 }
+
 .c-fullwidth {
   width: 100%;
 }
+
 .c-fullheight {
   height: 100%;
 }
-.c-initHide{
-  opacity:0 !important;
+
+.c-initHide {
+  opacity: 0 !important;
 }
-.c-ellipse{
-   text-overflow: ellipsis;
-   display: -webkit-box;
-   -webkit-box-orient: vertical;
-   -webkit-line-clamp: 2;
-   overflow:hidden;
+
+.c-ellipse {
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
 }
+
 /* 自定义样式 */
 
-.wx-view_RUFx1n{height: 100%; }
-.wx-view_IfJZkK{display: flex; padding: 1rem; justify-content: space-between; align-items: center; border-bottom: 1px solid rgb(209, 209, 209); position: fixed; z-index: 100; top: 0px; background-color: rgba(255,255,255,0.96); width: 100%; height: 4rem; }
-.wx-view_u7aIQl{display: flex; }
-.wx-image_SC1alK{width: 50px; height: 50px; border-radius: 50px; margin-right: 10px; flex-grow: 0; flex-shrink: 0; flex-basis: auto; }
-.wx-view_3ggkNG{display: flex; flex-direction: column; justify-content: center; text-align: left; }
-.wx-text_yvWBsn2{font-size: 13px; color: #a1a1a1; }
-.wx-navigator_2zAN7l{display: flex; align-items: center; width: 40px; height: 30px; text-align: center; justify-content: center; border-width: 1px; border-style: solid; border-color: rgb(227, 227, 227); border-radius: 2px; position: relative; }
-.wx-image_Sutyvo{width: 18px; height: 14px; }
-.wx-text_BYrm5g{position: absolute; right: -9px; top: -10px; font-size: 10px; width: 18px; height: 18px; line-height: 18px; border-radius: 20px; background-color: rgb(255, 0, 46); color: rgb(255, 255, 255); }
-.wx-navigator_iOsAsd{width: 60px; height: 60px; display: flex; background-color: rgba(242, 242, 242, 0.909804); border-radius: 40px; align-items: center; justify-content: center; position: fixed; bottom: 14px; right: 30px; z-index: 10; }
-.wx-image_SfQyMy{width: 34px; height: 34px; }
-.wx-scroll-view_PmrL5K{height: 100%; text-align: center; padding-bottom: 5px; padding-top: 4rem; -webkit-overflow-scrolling : touch;}
-.wx-view_WjSmLp{padding: 0.5rem 0.7rem; display: flex; flex-wrap: wrap; justify-content: space-between; }
-.wx-navigator_csHYE8{width: 8.9rem; height: 8.9rem; background-color: rgb(237, 237, 237); margin-bottom: 0.7rem; position: relative; }
-.wx-image_jfWp5t{width: 100%; height: 100%; }
-.wx-view_9TxaXG{position: absolute; width: 100%; bottom: 0px; background-color: rgba(0,0,0,0.81); display: flex; justify-content: space-between; height: 30px; align-items: center; padding-left: 10px; padding-right: 10px; }
-.wx-view_vnhcDJ{display: flex; align-items: center; }
-.wx-image_RO5xv0{width: 16px; height: 16px; margin-right: 5px; }
-.wx-text_6X8CEW{font-size: 12px; color: #ffffff; }
-.wx-text_VIqUJH{font-size: 12px; color: #dedede; }
-.wx-text_rDzX07{font-size: 12px; color: #bfbfbf; }
+.wx-view_RUFx1n {
+  height: 100%;
+}
 
+.wx-view_IfJZkK {
+  display: flex;
+  padding: 1rem;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid rgb(209, 209, 209);
+  position: fixed;
+  z-index: 100;
+  top: 0px;
+  background-color: rgba(255, 255, 255, 0.96);
+  width: 100%;
+  height: 4rem;
+}
+
+.wx-view_u7aIQl {
+  display: flex;
+}
+
+.wx-image_SC1alK {
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
+  margin-right: 10px;
+  flex-grow: 0;
+  flex-shrink: 0;
+  flex-basis: auto;
+}
+
+.wx-view_3ggkNG {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: left;
+}
+
+.wx-text_yvWBsn2 {
+  font-size: 13px;
+  color: #a1a1a1;
+}
+
+.wx-navigator_2zAN7l {
+  display: flex;
+  align-items: center;
+  width: 40px;
+  height: 30px;
+  text-align: center;
+  justify-content: center;
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgb(227, 227, 227);
+  border-radius: 2px;
+  position: relative;
+}
+
+.wx-image_Sutyvo {
+  width: 18px;
+  height: 14px;
+}
+
+.wx-text_BYrm5g {
+  position: absolute;
+  right: -9px;
+  top: -10px;
+  font-size: 10px;
+  width: 18px;
+  height: 18px;
+  line-height: 18px;
+  border-radius: 20px;
+  background-color: rgb(255, 0, 46);
+  color: rgb(255, 255, 255);
+}
+
+.wx-navigator_iOsAsd {
+  width: 60px;
+  height: 60px;
+  display: flex;
+  background-color: rgba(242, 242, 242, 0.909804);
+  border-radius: 40px;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  bottom: 14px;
+  right: 30px;
+  z-index: 10;
+}
+
+.wx-image_SfQyMy {
+  width: 34px;
+  height: 34px;
+}
+
+.wx-scroll-view_PmrL5K {
+  height: 100%;
+  text-align: center;
+  padding-bottom: 5px;
+  padding-top: 0rem;
+  -webkit-overflow-scrolling: touch;
+}
+
+.wx-view_WjSmLp {
+  padding: 0.5rem 0.7rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.wx-navigator_csHYE8 {
+  width: 8.9rem;
+  height: 6.9rem;
+  background-color: rgb(237, 237, 237);
+  margin-bottom: 0.7rem;
+  position: relative;
+}
+
+.wx-image_jfWp5t {
+  width: 100%;
+  height: 100%;
+}
+
+.wx-view_9TxaXG {
+  position: absolute;
+  width: 100%;
+  bottom: 0px;
+  background-color: rgba(0, 0, 0, 0.81);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: auto;
+  align-items: center;
+  padding:2px 5px;
+
+  opacity: 0.8;
+}
+
+.wx-view_productName {
+  display: flex;
+  text-align: left;
+}
+
+.wx-view_productText {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.wx-view_productPriceAndSales {
+
+  display: flex;
+     justify-content: space-between;
+  align-items: center;
+}
+
+.productPrice {
+  text-align: left;
+  min-width: 53%;
+}
+
+
+.wx-view_vnhcDJ {
+  display: flex;
+  align-items: center;
+}
+
+.text_blank {
+  width: 5px;
+}
+
+.wx-image_RO5xv0 {
+  width: 20px;
+  height: 20px;
+  margin-right: 5px;
+ 
+}
+
+.wx-text_6X8CEW {
+  font-size: 12px;
+  color: #fff;
+}
+
+.wx-text_VIqUJH {
+  font-size: 12px;
+  color: #dedede;
+}
+
+.wx-text_rDzX07 {
+  font-size: 12px;
+  color: #bfbfbf;
+}
